@@ -8,13 +8,11 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import net.dv8tion.jda.api.components.actionrow.ActionRow;
 import net.dv8tion.jda.api.components.buttons.Button;
-import net.dv8tion.jda.api.components.buttons.ButtonStyle;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
-import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import org.apache.commons.collections4.ListUtils;
-import org.jetbrains.annotations.NotNull;
+import org.apache.commons.lang3.function.Consumers;
 import ti4.buttons.Buttons;
 import ti4.helpers.ActionCardHelper.ACStatus;
 import ti4.image.Mapper;
@@ -22,13 +20,14 @@ import ti4.listeners.annotations.ButtonHandler;
 import ti4.map.Game;
 import ti4.map.Player;
 import ti4.message.MessageHelper;
+import ti4.message.logging.BotLogger;
 import ti4.model.ActionCardModel;
 import ti4.service.emoji.CardEmojis;
 
 public class NewStuffHelper {
 
     public static List<Button> buttonPagination(List<Button> allButtons, String prefixID, int pageNum) {
-        return buttonPagination(allButtons, prefixID, 25, pageNum, false);
+        return buttonPagination(allButtons, null, prefixID, 25, pageNum, false);
     }
 
     /**
@@ -40,8 +39,14 @@ public class NewStuffHelper {
      * @return Page of buttons, with 2 additional "back" and "forward" buttons. Additional buttons are formatted like "prefixId_page1"
      */
     public static List<Button> buttonPagination(
-            List<Button> allButtons, String prefixID, int allottedSpace, int pageNum, boolean deleteButton) {
+            List<Button> allButtons,
+            List<Button> extraButtons,
+            String prefixID,
+            int allottedSpace,
+            int pageNum,
+            boolean deleteButton) {
         if (deleteButton) allottedSpace--;
+        if (extraButtons != null) allottedSpace -= extraButtons.size();
 
         if (allottedSpace < allButtons.size()) {
             if (allottedSpace < 3) {
@@ -56,29 +61,38 @@ public class NewStuffHelper {
 
             List<Button> buttonsToUse = new ArrayList<>();
             if (pageNum > 0) {
-                Button prevPage = Button.of(
-                        ButtonStyle.PRIMARY,
-                        prefixID + "page" + (pageNum - 1),
-                        "Previous Page",
-                        Emoji.fromUnicode("⏪"));
+                String prev = "Previous Page (" + pageNum + "/" + (maxPage + 1) + ")";
+                Button prevPage = Buttons.blue(prefixID + "page" + (pageNum - 1), prev, "⏪");
                 buttonsToUse.add(prevPage);
             }
             buttonsToUse.addAll(paginated.get(pageNum));
             if (pageNum < maxPage) {
-                Button nextPage = Button.of(
-                        ButtonStyle.PRIMARY, prefixID + "page" + (pageNum + 1), "Next Page", Emoji.fromUnicode("⏩"));
+                String next = "Next Page (" + (pageNum + 2) + "/" + (maxPage + 1) + ")";
+                Button nextPage = Buttons.blue(prefixID + "page" + (pageNum + 1), next, "⏩");
                 buttonsToUse.add(nextPage);
             }
-            if (deleteButton) buttonsToUse.add(Buttons.red("deleteButtons", "Delete these buttons"));
+            if (extraButtons != null) buttonsToUse.addAll(extraButtons);
+            if (deleteButton) buttonsToUse.add(Buttons.red("deleteButtons", "Delete These Buttons"));
             return buttonsToUse;
         }
         return allButtons;
     }
 
     public static boolean checkAndHandlePaginationChange(
-            @NotNull GenericInteractionCreateEvent event,
+            GenericInteractionCreateEvent event,
             MessageChannel channel,
             List<Button> allButtons,
+            String message,
+            String buttonPrefix,
+            String buttonID) {
+        return checkAndHandlePaginationChange(event, channel, allButtons, null, message, buttonPrefix, buttonID);
+    }
+
+    public static boolean checkAndHandlePaginationChange(
+            GenericInteractionCreateEvent event,
+            MessageChannel channel,
+            List<Button> allButtons,
+            List<Button> extraButtons,
             String message,
             String buttonPrefix,
             String buttonID) {
@@ -86,8 +100,8 @@ public class NewStuffHelper {
         Matcher pageMatcher = Pattern.compile(pageRegex).matcher(buttonID);
         if (pageMatcher.find()) {
             int page = Integer.parseInt(pageMatcher.group("page"));
-            List<Button> buttons = NewStuffHelper.buttonPagination(allButtons, buttonPrefix, 24, page, true);
-            NewStuffHelper.sendOrEditButtons(event, event.getMessageChannel(), message, buttons);
+            List<Button> buttons = buttonPagination(allButtons, extraButtons, buttonPrefix, 24, page, true);
+            sendOrEditButtons(event, channel, message, buttons);
             return true;
         }
         return false;
@@ -95,13 +109,14 @@ public class NewStuffHelper {
 
     public static void sendOrEditButtons(
             GenericInteractionCreateEvent event, MessageChannel channel, String message, List<Button> buttons) {
-        if (event != null
-                && event instanceof ButtonInteractionEvent bEvent
+        if (event instanceof ButtonInteractionEvent bEvent
                 && bEvent.getMessage().getContentRaw().equals(message)) {
             // replace the buttons in the previous message
             List<List<ActionRow>> actionRows = MessageHelper.getPartitionedButtonLists(buttons);
-            if (actionRows.size() >= 1) {
-                bEvent.getHook().editOriginalComponents(actionRows.get(0)).queue();
+            if (!actionRows.isEmpty()) {
+                bEvent.getHook()
+                        .editOriginalComponents(actionRows.getFirst())
+                        .queue(Consumers.nop(), BotLogger::catchRestError);
             }
         } else {
             // make a new message
@@ -113,7 +128,8 @@ public class NewStuffHelper {
     public static void resolveGarboziaTE(
             GenericInteractionCreateEvent event, Game game, Player player, String buttonID) {
         String buttonPrefix = player.getFinsFactionCheckerPrefix() + "garbozia_";
-        String message = "Use buttons to pick an action card from the discard and put it on Doc 'N Pic's Salvage Yard:";
+        String message =
+                "Use buttons to pick an action card from the discard and put it on _Doc 'N Pic's Salvage Yard_.";
         List<Button> buttons = garboziaButtons(game, player);
         if (checkAndHandlePaginationChange(
                 event, player.getCorrectChannel(), buttons, message, buttonPrefix, buttonID)) {
@@ -128,13 +144,12 @@ public class NewStuffHelper {
             game.getDiscardACStatus().put(acNum, ACStatus.garbozia);
 
             String msg = player.getRepresentation() + " picked up " + acModel.getName()
-                    + " from the discard and placed it on Doc 'N Pic's Salvage Yard.";
+                    + " from the discard and placed it on _Doc 'N Pic's Salvage Yard_.";
             msg +=
-                    "\n> You can check the cards on garbozia at any time by looking at the Action Card discard pile in the bot map thread";
+                    "You can check the cards on _Doc 'N Pic's Salvage Yard_ at any time by looking at the action card discard pile in the bot map thread.";
             MessageHelper.sendMessageToChannel(player.getCorrectChannel(), msg);
             ActionCardHelper.sendActionCardInfo(game, player, event);
             ButtonHelper.deleteMessage(event);
-            return;
         }
     }
 
@@ -146,10 +161,10 @@ public class NewStuffHelper {
         // Right now, only a 'null' status allows the card to be picked up. Add more to this list if it changes in the
         // future
         List<ACStatus> allowedStatus = new ArrayList<>(Collections.singleton(null));
-        game.getDiscardActionCards().entrySet().stream()
-                .filter(e -> allowedStatus.contains(status.getOrDefault(e.getKey(), null)))
-                .map(e -> Map.entry(e.getKey(), Mapper.getActionCard(e.getKey()).getName()))
-                .map(e -> Buttons.green(pre + e.getKey(), e.getValue(), CardEmojis.ActionCard))
+        game.getDiscardActionCards().keySet().stream()
+                .filter(integer -> allowedStatus.contains(status.getOrDefault(integer, null)))
+                .map(integer -> Map.entry(integer, Mapper.getActionCard(integer).getName()))
+                .map(e -> Buttons.green(pre + e.getKey(), e.getValue(), CardEmojis.getACEmoji(game)))
                 .forEach(allButtons::add);
         return allButtons;
     }
