@@ -5,17 +5,19 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import lombok.Getter;
 import net.dv8tion.jda.api.components.buttons.Button;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
+import org.apache.commons.collections4.ListUtils;
 import ti4.buttons.Buttons;
 import ti4.helpers.AliasHandler;
+import ti4.helpers.Constants;
 import ti4.helpers.MapTemplateHelper;
 import ti4.helpers.omega_phase.PriorityTrackHelper;
 import ti4.helpers.omega_phase.PriorityTrackHelper.PriorityTrackMode;
@@ -23,10 +25,12 @@ import ti4.helpers.settingsFramework.menus.AndcatReferenceCardsDraftableSettings
 import ti4.helpers.settingsFramework.menus.DraftSystemSettings;
 import ti4.helpers.settingsFramework.menus.SettingsMenu;
 import ti4.helpers.settingsFramework.menus.SourceSettings;
+import ti4.helpers.twilightsfall.TwilightsFallInfoHelper;
 import ti4.image.Mapper;
 import ti4.map.Game;
 import ti4.map.Player;
 import ti4.map.Tile;
+import ti4.message.MessageHelper;
 import ti4.message.logging.BotLogger;
 import ti4.message.logging.LogOrigin;
 import ti4.model.FactionModel;
@@ -69,50 +73,86 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
         return "Faction Reference Cards";
     }
 
-    public void initialize(
-            int numPackages, List<ComponentSource> sources, List<String> presetFactions, List<String> bannedFactions) {
-
-        List<String> effBannedFactions = new ArrayList<>(bannedFactions);
-
-        // TODO: Balance the packages somehow
+    public String initialize(int numPackages, List<ComponentSource> sources, List<String> bannedFactions) {
 
         List<String> availableFactions = new ArrayList<>(Mapper.getFactionsValues().stream()
-                .filter(f -> !effBannedFactions.contains(f.getAlias()))
-                .filter(f -> !presetFactions.contains(f.getAlias()))
+                .filter(f -> !bannedFactions.contains(f.getAlias()))
                 .filter(f -> f.getPriorityNumber() != null)
                 .filter(f -> sources.contains(f.getSource()))
                 .filter(f -> !f.getAlias().contains("keleres")
                         || "keleresm".equals(f.getAlias())) // Limit the pool to only 1 keleres flavor
                 .map(FactionModel::getAlias)
                 .toList());
-        List<String> randomOrder = new ArrayList<>(presetFactions);
-        Collections.shuffle(randomOrder);
-        Collections.shuffle(availableFactions);
-        randomOrder.addAll(availableFactions);
-        randomOrder = new LinkedList<>(randomOrder.stream().distinct().toList());
 
-        if (randomOrder.size() < numPackages * 3) {
-            BotLogger.warning("Not enough factions to fill Andcat Reference Card Packages. " + "Requested "
-                    + numPackages + " packages but only " + randomOrder.size()
-                    + " factions available.");
-            return;
+        // Sort the available factions by priority number
+        List<String> sortedFactions = availableFactions.stream()
+                .sorted((p1, p2) -> {
+                    FactionModel f1 = Mapper.getFaction(p1);
+                    FactionModel f2 = Mapper.getFaction(p2);
+                    return Integer.compare(f1.getPriorityNumber(), f2.getPriorityNumber());
+                })
+                .collect(Collectors.toList());
+
+        // Break factions into 3 same-size groups, segmented by priority number
+        int partitionSize = (int) Math.ceil((double) sortedFactions.size() / 3); // Typically 10
+        List<List<String>> partitions = ListUtils.partition(sortedFactions, partitionSize);
+
+        // Shuffle each faction group
+        for (List<String> partition : partitions) {
+            Collections.shuffle(partition);
         }
 
-        for (int packageKey = 1; packageKey <= numPackages; packageKey++) {
-            List<String> packageFactions = new ArrayList<>();
-            for (int i = 0; i < 3 && !randomOrder.isEmpty(); i++) {
-                packageFactions.add(randomOrder.removeFirst());
-            }
-            if (packageFactions.size() < 3) {
-                BotLogger.warning(
-                        new LogOrigin(),
-                        "Not enough factions to fill Andcat Reference Card Package " + packageKey + ". Only found "
-                                + packageFactions.size() + " factions.");
-            }
+        // To get a nice distribution of factions, we want to build at least ~80% of all possible packages
+        // This results in pulling out more of the powerful/weak factions before picking the fully random final faction.
+        int packagesPossible = partitionSize;
+        if (numPackages > packagesPossible) {
+            return "Not enough factions to fill Andcat Reference Card Packages. "
+                    + "Requested " + numPackages + " packages but only "
+                    + packagesPossible + " unique packages possible with " + availableFactions.size() + " factions.";
+        }
+        int buildPackages = Math.max(numPackages, (int) Math.ceil(packagesPossible * 0.8));
+
+        List<List<String>> packages = new ArrayList<>(buildPackages);
+
+        List<String> strongFactions = new ArrayList<>(partitions.get(0));
+        List<String> midFactions = new ArrayList<>(partitions.get(1));
+        List<String> weakFactions = new ArrayList<>(partitions.get(2));
+
+        // First add powerful factions
+        for (int i = 0; i < buildPackages; i++) {
+            packages.add(new ArrayList<>());
+            packages.get(i).add(strongFactions.removeFirst());
+        }
+        // Then add weak factions
+        for (int i = 0; i < buildPackages; i++) {
+            packages.get(i).add(weakFactions.removeFirst());
+        }
+        // Then mix ALL remaining factions together
+        List<String> remainingFactions = new ArrayList<>();
+        remainingFactions.addAll(strongFactions);
+        remainingFactions.addAll(weakFactions);
+        remainingFactions.addAll(midFactions); // Medium factions last to mix better
+        Collections.shuffle(remainingFactions);
+
+        // Finish filling packages from the remaining pool
+        // We only need to finish numPackages
+        for (int i = 0; i < numPackages; i++) {
+            List<String> currentPackage = packages.get(i);
+            currentPackage.add(remainingFactions.removeFirst());
+            currentPackage.sort((p1, p2) -> {
+                FactionModel f1 = Mapper.getFaction(p1);
+                FactionModel f2 = Mapper.getFaction(p2);
+                return Integer.compare(f1.getPriorityNumber(), f2.getPriorityNumber());
+            });
+
+            // Add package to finalized list
+            int packageKey = i + 1;
             ReferenceCardPackage refCardPackage =
-                    new ReferenceCardPackage(packageKey, packageFactions, null, null, null, null);
+                    new ReferenceCardPackage(packageKey, currentPackage, null, null, null, null);
             referenceCardPackages.put(packageKey, refCardPackage);
         }
+
+        return null;
     }
 
     public static List<FactionModel> getFactionsInPackage(ReferenceCardPackage refCardPackage) {
@@ -128,6 +168,10 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
             factions.add(faction);
         }
         return factions;
+    }
+
+    public static String getChoiceKey(Integer packageNum) {
+        return "package" + packageNum;
     }
 
     public ReferenceCardPackage getPackageByChoiceKey(String choiceKey) {
@@ -148,27 +192,48 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
         for (Entry<Integer, ReferenceCardPackage> entry : referenceCardPackages.entrySet()) {
             Integer packageKey = entry.getKey();
             List<FactionModel> factionsInPackage = getFactionsInPackage(entry.getValue());
-            String choiceKey = "package" + packageKey;
-            String unformattedName = "Package " + packageKey;
-            String formattedName = "Package " + packageKey + " ("
-                    + String.join(
-                            ", ",
-                            factionsInPackage.stream()
-                                    .map(FactionModel::getShortName)
-                                    .toList()) + ")";
+            String choiceKey = getChoiceKey(packageKey);
+            String unformattedName = makePackageText(factionsInPackage, false, false);
+            String formattedName = makePackageText(factionsInPackage, true, true);
             String identifyingEmoji = factionsInPackage.stream()
                     .map(FactionModel::getFactionEmoji)
                     .reduce("", String::concat);
             DraftChoice choice = new DraftChoice(
-                    getType(),
+                    TYPE,
                     choiceKey,
-                    makeChoiceButton(choiceKey, formattedName, null),
+                    makeChoiceButton(choiceKey, makePackageText(factionsInPackage, true, false), null),
                     formattedName,
                     unformattedName,
                     identifyingEmoji);
             choices.add(choice);
         }
         return choices;
+    }
+
+    private String makePackageText(
+            List<FactionModel> factionsInPackage, boolean includePriority, boolean includeEmojis) {
+        StringBuilder formattedNameBuilder = new StringBuilder();
+        for (int i = 0; i < 3; ++i) {
+            FactionModel pFaction = factionsInPackage.get(i);
+            if (includeEmojis) {
+                formattedNameBuilder.append(pFaction.getFactionEmoji()).append(" ");
+            }
+            if (pFaction.getShortName().toLowerCase().contains("keleres")) {
+                formattedNameBuilder.append("Keleres");
+            } else {
+                formattedNameBuilder.append(pFaction.getShortName());
+            }
+            if (includePriority) {
+                formattedNameBuilder
+                        .append(" [")
+                        .append(pFaction.getPriorityNumber())
+                        .append("]");
+            }
+            if (i < 2) {
+                formattedNameBuilder.append(", ");
+            }
+        }
+        return formattedNameBuilder.toString();
     }
 
     @Override
@@ -190,13 +255,13 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
             GenericInteractionCreateEvent event, DraftManager draftManager, String playerUserId, String commandKey) {
 
         List<ReferenceCardPackage> informPackages;
-        if (commandKey.equals("remaininginfo")) {
+        if ("remaininginfo".equals(commandKey)) {
             informPackages = new ArrayList<>(referenceCardPackages.values());
             for (String pId : draftManager.getPlayerStates().keySet()) {
                 List<DraftChoice> playerChoices = draftManager.getPlayerPicks(pId, TYPE);
                 if (playerChoices != null) {
                     for (DraftChoice choice : playerChoices) {
-                        ReferenceCardPackage refPackage = this.getPackageByChoiceKey(choice.getChoiceKey());
+                        ReferenceCardPackage refPackage = getPackageByChoiceKey(choice.getChoiceKey());
                         informPackages.remove(refPackage);
                     }
                 }
@@ -207,13 +272,13 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
                 new AndcatReferenceCardsMessageHelper(this)
                         .sendPackageInfos(draftManager, playerUserId, informPackages);
             }
-        } else if (commandKey.equals("pickedinfo")) {
+        } else if ("pickedinfo".equals(commandKey)) {
             informPackages = new ArrayList<>();
             for (String pId : draftManager.getPlayerStates().keySet()) {
                 List<DraftChoice> playerChoices = draftManager.getPlayerPicks(pId, TYPE);
                 if (playerChoices != null) {
                     for (DraftChoice choice : playerChoices) {
-                        ReferenceCardPackage refPackage = this.getPackageByChoiceKey(choice.getChoiceKey());
+                        ReferenceCardPackage refPackage = getPackageByChoiceKey(choice.getChoiceKey());
                         if (!informPackages.contains(refPackage)) {
                             informPackages.add(refPackage);
                         }
@@ -226,17 +291,16 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
                 new AndcatReferenceCardsMessageHelper(this)
                         .sendPackageInfos(draftManager, playerUserId, informPackages);
             }
-        } else if (commandKey.equals("allinfo")) {
+        } else if ("allinfo".equals(commandKey)) {
             informPackages = new ArrayList<>(referenceCardPackages.values());
             new AndcatReferenceCardsMessageHelper(this).sendPackageInfos(draftManager, playerUserId, informPackages);
         } else if (commandKey.startsWith("info_")) {
             String[] tokens = commandKey.substring("info_".length()).split("_");
-            informPackages = Arrays.asList(tokens).stream()
-                    .map(this::getPackageByChoiceKey)
-                    .toList();
+            informPackages =
+                    Arrays.stream(tokens).map(this::getPackageByChoiceKey).toList();
             new AndcatReferenceCardsMessageHelper(this).sendPackageInfos(draftManager, playerUserId, informPackages);
         } else if (commandKey.startsWith("assign_")) {
-            new AndcatReferenceCardsMessageHelper(this)
+            return new AndcatReferenceCardsMessageHelper(this)
                     .handleAssignButton(event, draftManager, playerUserId, commandKey);
         } else {
             return "Unknown command: " + commandKey;
@@ -296,11 +360,11 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
             }
             Integer packageKey = Integer.parseInt(packageToken.substring("package".length()));
             List<String> factions = List.of(tokens[i + 1].split("\\."));
-            String homeSystemFaction = tokens[i + 2].equals("null") ? null : tokens[i + 2];
-            String startingUnitsFaction = tokens[i + 3].equals("null") ? null : tokens[i + 3];
-            String speakerOrderFaction = tokens[i + 4].equals("null") ? null : tokens[i + 4];
+            String homeSystemFaction = "null".equals(tokens[i + 2]) ? null : tokens[i + 2];
+            String startingUnitsFaction = "null".equals(tokens[i + 3]) ? null : tokens[i + 3];
+            String speakerOrderFaction = "null".equals(tokens[i + 4]) ? null : tokens[i + 4];
             Boolean choicesFinal = null;
-            if (!tokens[i + 5].equals("null")) {
+            if (!"null".equals(tokens[i + 5])) {
                 choicesFinal = Boolean.parseBoolean(tokens[i + 5]);
             }
             ReferenceCardPackage refPackage = new ReferenceCardPackage(
@@ -363,10 +427,9 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
 
     @Override
     public String applySetupMenuChoices(GenericInteractionCreateEvent event, SettingsMenu menu) {
-        if (menu == null || !(menu instanceof DraftSystemSettings)) {
+        if (!(menu instanceof DraftSystemSettings draftSystemSettings)) {
             return "Error: Could not find parent draft system settings.";
         }
-        DraftSystemSettings draftSystemSettings = (DraftSystemSettings) menu;
         Game game = draftSystemSettings.getGame();
         if (game == null) {
             return "Error: Could not find game instance.";
@@ -374,28 +437,41 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
         AndcatReferenceCardsDraftableSettings settings = draftSystemSettings.getAndcatReferenceCardsDraftableSettings();
         SourceSettings sourceSettings = draftSystemSettings.getSourceSettings();
 
-        initialize(
+        // Use preset packages when provided
+        if (settings.getParsedPackages() != null
+                && !settings.getParsedPackages().isEmpty()) {
+            referenceCardPackages.clear();
+            for (ReferenceCardPackage refPackage : settings.getParsedPackages()) {
+                referenceCardPackages.put(refPackage.key(), refPackage);
+            }
+            return null;
+        }
+
+        return initialize(
                 settings.getNumPackages().getVal(),
                 sourceSettings.getFactionSources(),
-                settings.getPriFactions().getKeys().stream().toList(),
                 settings.getBanFactions().getKeys().stream().toList());
-
-        return null;
     }
 
     @Override
     public void onDraftEnd(DraftManager draftManager) {
         // Send buttons to assign reference cards to specific setup things
+        AndcatReferenceCardsMessageHelper andcatMessageHelper = new AndcatReferenceCardsMessageHelper(this);
         for (String playerId : draftManager.getPlayerStates().keySet()) {
             List<DraftChoice> playerChoices = draftManager.getPlayerPicks(playerId, TYPE);
             if (playerChoices == null || playerChoices.isEmpty()) {
                 continue;
             }
-            DraftChoice pick = playerChoices.get(0);
-            ReferenceCardPackage refPackage = this.getPackageByChoiceKey(pick.getChoiceKey());
+            DraftChoice pick = playerChoices.getFirst();
+            ReferenceCardPackage refPackage = getPackageByChoiceKey(pick.getChoiceKey());
             Player player = draftManager.getGame().getPlayer(playerId);
-            new AndcatReferenceCardsMessageHelper(this).sendPackageButtons(draftManager, player, refPackage);
+
+            andcatMessageHelper.sendPackageButtons(draftManager, player, refPackage);
         }
+        andcatMessageHelper.updatePackagePickSummary(draftManager);
+
+        // This draftable indicates an Inaugural Splice will be needed
+        draftManager.getGame().setStoredValue("needsInauguralSplice", "true");
     }
 
     @Override
@@ -407,8 +483,8 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
                 return "Player " + player.getRepresentation() + " has not picked a reference card package.";
             }
 
-            DraftChoice pick = playerChoices.get(0);
-            ReferenceCardPackage refPackage = this.getPackageByChoiceKey(pick.getChoiceKey());
+            DraftChoice pick = playerChoices.getFirst();
+            ReferenceCardPackage refPackage = getPackageByChoiceKey(pick.getChoiceKey());
             if (refPackage.homeSystemFaction() == null) {
                 return "Player " + player.getRepresentation() + " has not assigned a home system faction.";
             }
@@ -434,8 +510,8 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
         if (playerChoices == null || playerChoices.isEmpty()) {
             return null;
         }
-        DraftChoice pick = playerChoices.get(0);
-        ReferenceCardPackage refPackage = this.getPackageByChoiceKey(pick.getChoiceKey());
+        DraftChoice pick = playerChoices.getFirst();
+        ReferenceCardPackage refPackage = getPackageByChoiceKey(pick.getChoiceKey());
 
         // Determine speaker position and set home system location
         List<String> speakerOrder = getSpeakerOrder(draftManager);
@@ -443,34 +519,91 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
         playerSetupState.setSetSpeaker(speakerPosition == 1);
         String homeTilePosition =
                 MapTemplateHelper.getPlayerHomeSystemLocation(speakerPosition, game.getMapTemplateID());
-        if (shouldAlsoSetSeat(draftManager)) {
+        if (isSourceOfSeat(draftManager)) {
             playerSetupState.setPositionHS(homeTilePosition);
         }
 
-        // After setting a home system position, the slice can be placed
+        // If the home system faction is Keleres, we switch them here to a random unused faction.
+        ReferenceCardPackage updatedPackage;
+        if (refPackage.homeSystemFaction() != null
+                && refPackage.homeSystemFaction().startsWith("keleres")) {
+
+            FactionModel newKeleresFaction = getKeleresHomeSystemFaction(draftManager);
+            if (newKeleresFaction != null) {
+                String sb = game.getPlayer(playerUserId).getRepresentation()
+                        + " had Keleres as their home system faction, and drew a random unused home system tile."
+                        + System.lineSeparator()
+                        + TwilightsFallInfoHelper.getFactionSetupInfo(newKeleresFaction, false, true, false);
+                MessageHelper.sendMessageToChannel(game.getActionsChannel(), sb);
+
+                updatedPackage = new ReferenceCardPackage(
+                        refPackage.key(),
+                        refPackage.factions(),
+                        newKeleresFaction.getAlias(),
+                        refPackage.startingUnitsFaction(),
+                        refPackage.speakerOrderFaction(),
+                        refPackage.choicesFinal());
+                referenceCardPackages.put(refPackage.key(), updatedPackage);
+            } else {
+                BotLogger.error(
+                        new LogOrigin(game),
+                        Constants.jabberwockyPing()
+                                + " Could not find a new faction for Keleres home system assignment.");
+                updatedPackage = refPackage;
+            }
+        } else {
+            updatedPackage = refPackage;
+        }
+
+        // After setting a home system position, the home system + slice can be placed
         PartialMapService.tryUpdateMap(draftManager, null, true);
 
         // Place planets and units after faction and color are properly set
-        return (Player player) -> doPostSetupWork(draftManager, player, refPackage);
+        return (Player player) -> doPostSetupWork(draftManager, player, updatedPackage);
     }
 
+    // What is this method for? Setup tasks which require a Player reference.
+    // Once a draft finishes, things happen in this order:
+    // onDraftEnd(): Trigger card-picking, which needs to finish before setupPlayer() is called
+    // setupPlayer(): Sets up the player's home system tile and player order (tasks which DON'T require a Player
+    // reference)
+    // Then the player setup service is invoked, which sets up faction and game state for start (setting up Player
+    // objects)
+    // doPostSetupWork(): Gives player their home system planets and units (tasks which require a Player reference)
     private void doPostSetupWork(DraftManager draftManager, Player player, ReferenceCardPackage refPackage) {
 
         Game game = draftManager.getGame();
         List<String> speakerOrder = getSpeakerOrder(draftManager);
         int speakerPosition = speakerOrder.indexOf(player.getUserID()) + 1;
 
-        // If not setting seat, Speaker Order needs to be set via Priority Track
-        if (!shouldAlsoSetSeat(draftManager)) {
+        String homeTilePosition;
+        if (isSourceOfSeat(draftManager)) {
+            // Get the HS tile from speaker order
+            homeTilePosition = MapTemplateHelper.getPlayerHomeSystemLocation(speakerPosition, game.getMapTemplateID());
+        } else {
             if (game.getPriorityTrackMode() == PriorityTrackMode.NONE) {
                 game.setPriorityTrackMode(PriorityTrackMode.THIS_ROUND_ONLY);
             }
+            // If not setting seat, Speaker Order needs to be set via Priority Track
             PriorityTrackHelper.AssignPlayerToPriority(draftManager.getGame(), player, speakerPosition);
+
+            List<DraftChoice> seatChoices = draftManager.getPlayerPicks(player.getUserID(), SeatDraftable.TYPE);
+            if (seatChoices.isEmpty()) {
+                BotLogger.error(
+                        new LogOrigin(game),
+                        Constants.jabberwockyPing()
+                                + " Could not find a seat choice for player " + player.getUserID()
+                                + " despite drafting for Seat, which should not happen. Is there some other way the players are being assigned seats?");
+                throw new IllegalStateException(
+                        "No seat choice found for player " + player.getUserID() + " despite drafting for Seat.");
+            }
+            DraftChoice seatChoice = seatChoices.getFirst();
+            Integer seatNumber = SeatDraftable.getSeatNumberFromChoiceKey(seatChoice.getChoiceKey());
+
+            // Get the HS tile from selected seat
+            homeTilePosition = MapTemplateHelper.getPlayerHomeSystemLocation(seatNumber, game.getMapTemplateID());
         }
 
-        // Get the HS tile
-        String homeTilePosition =
-                MapTemplateHelper.getPlayerHomeSystemLocation(speakerPosition, game.getMapTemplateID());
         Tile hsTile = game.getTileByPosition(homeTilePosition);
 
         // Add home system extra tiles if needed
@@ -510,12 +643,11 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
         for (Entry<String, PlayerDraftState> entry :
                 draftManager.getPlayerStates().entrySet()) {
             PlayerDraftState pState = entry.getValue();
-            if (pState.getPickCount(AndcatReferenceCardsDraftable.TYPE) == 0) {
+            if (pState.getPickCount(TYPE) == 0) {
                 return Collections.emptyList();
             }
-            String choiceKey =
-                    pState.getPicks(AndcatReferenceCardsDraftable.TYPE).get(0).getChoiceKey();
-            ReferenceCardPackage refPackage = this.getPackageByChoiceKey(choiceKey);
+            String choiceKey = pState.getPicks(TYPE).getFirst().getChoiceKey();
+            ReferenceCardPackage refPackage = getPackageByChoiceKey(choiceKey);
             if (refPackage.speakerOrderFaction() == null) {
                 return Collections.emptyList();
             }
@@ -528,12 +660,12 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
 
         // Sort player states by speaker order priority number
         playerStates.sort((p1, p2) -> {
-            DraftChoice p1Choice = p1.getValue().getPicks(TYPE).get(0);
-            ReferenceCardPackage p1Package = this.getPackageByChoiceKey(p1Choice.getChoiceKey());
+            DraftChoice p1Choice = p1.getValue().getPicks(TYPE).getFirst();
+            ReferenceCardPackage p1Package = getPackageByChoiceKey(p1Choice.getChoiceKey());
             FactionModel p1SpeakerFaction = Mapper.getFaction(p1Package.speakerOrderFaction());
 
-            DraftChoice p2Choice = p2.getValue().getPicks(TYPE).get(0);
-            ReferenceCardPackage p2Package = this.getPackageByChoiceKey(p2Choice.getChoiceKey());
+            DraftChoice p2Choice = p2.getValue().getPicks(TYPE).getFirst();
+            ReferenceCardPackage p2Package = getPackageByChoiceKey(p2Choice.getChoiceKey());
             FactionModel p2SpeakerFaction = Mapper.getFaction(p2Package.speakerOrderFaction());
 
             return Integer.compare(p1SpeakerFaction.getPriorityNumber(), p2SpeakerFaction.getPriorityNumber());
@@ -542,7 +674,48 @@ public class AndcatReferenceCardsDraftable extends SinglePickDraftable {
         return playerStates.stream().map(Entry::getKey).toList();
     }
 
-    private boolean shouldAlsoSetSeat(DraftManager draftManager) {
-        return !draftManager.getDraftables().stream().anyMatch(d -> d instanceof SeatDraftable);
+    private boolean isSourceOfSeat(DraftManager draftManager) {
+        return draftManager.getDraftables().stream().noneMatch(d -> d instanceof SeatDraftable);
+    }
+
+    private FactionModel getKeleresHomeSystemFaction(DraftManager draftManager) {
+        // Try and lookup the faction sources to get a list of possible factions
+        Game game = draftManager.getGame();
+        List<ComponentSource> factionSources;
+        List<String> bannedFactions;
+        if (game.getDraftSystemSettingsUnsafe() != null || game.getDraftSystemSettingsJson() != null) {
+            factionSources =
+                    game.initializeDraftSystemSettings().getSourceSettings().getFactionSources();
+            bannedFactions = game
+                    .initializeDraftSystemSettings()
+                    .getAndcatReferenceCardsDraftableSettings()
+                    .getBanFactions()
+                    .getKeys()
+                    .stream()
+                    .toList();
+        } else {
+            BotLogger.warning(
+                    new LogOrigin(game),
+                    "Could not find draft system settings to lookup faction sources for Keleres home system assignment.");
+            factionSources = List.of(ComponentSource.base, ComponentSource.pok, ComponentSource.thunders_edge);
+            bannedFactions = List.of();
+        }
+
+        List<String> usedFactions = new ArrayList<>();
+        for (ReferenceCardPackage packages : referenceCardPackages.values()) {
+            if (packages.homeSystemFaction() != null) {
+                usedFactions.add(packages.homeSystemFaction());
+            }
+        }
+
+        List<FactionModel> availableFactions = Mapper.getFactionsValues().stream()
+                .filter(f -> !bannedFactions.contains(f.getAlias()))
+                .filter(f -> factionSources.contains(f.getSource()))
+                .filter(f -> !usedFactions.contains(f.getAlias()))
+                .filter(f -> f.getPriorityNumber() != null)
+                .filter(f -> !f.getAlias().contains("keleres"))
+                .collect(Collectors.toList());
+        Collections.shuffle(availableFactions);
+        return availableFactions.isEmpty() ? null : availableFactions.getFirst();
     }
 }
